VO y DTO andando

--- a/ComiteApp/Views/Usuario/Index.cshtml
+++ b/ComiteApp/Views/Usuario/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<ComiteLogicaNegocio.Entidades.Usuario>
+﻿@using ComiteCompartido.Dtos.Usuarios
+@model IEnumerable<UsuarioListadoDto>
 
 @{
     ViewData["Title"] = "Index";
