Login admin y digitador funcionando

--- a/ComiteApp/Views/Admin/Index.cshtml
+++ b/ComiteApp/Views/Admin/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index Usuario Digitador</h1>
+<h1>Index Usuario Administrador</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
