--- a/ComiteApp/Views/Admin/Index.cshtml
+++ b/ComiteApp/Views/Admin/Index.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index Usuario Administrador</h1>
+<h1>Bienvenido Usuario Administrador</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Agregar un Digitador</a>
 </p>
 
 <table class="table">
