--- a/ComiteApp/Views/Login/Login.cshtml
+++ b/ComiteApp/Views/Login/Login.cshtml
@@ -8,4 +8,10 @@
     <input  type="text" name="email" placeholder="Email"/>
     <input  type="text" name="password" placeholder="password"/>
     <button type="submit">Login</button>
+    <p>Usuario por defecto: 
+    <ul>
+        <li>Email: admin@admin.com</li>
+        <li>Password: Admin.2024</li>
+    </ul>
+    </p>
 </form>
