--- a/ComiteApp/Views/Usuario/Index.cshtml
+++ b/ComiteApp/Views/Usuario/Index.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Bienvenido Usuario Administrador</h1>
+<h1>Gestion de Usuarios</h1>
 
 <p>
-    <a asp-controller="Digitador" asp-action="Create">Agregar un Digitador</a>
+    <a asp-action="Create">Agregar Nuevo</a>
 </p>
 
 <table class="table">
@@ -16,9 +16,6 @@
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                Rol
             </th>
             <th></th>
         </tr>
@@ -31,11 +28,8 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                    @Html.DisplayFor(modelItem => item.Discriminator)
-            </td>
-            <td>
                 @Html.ActionLink("Edit", "Edit", new {  id=item.Id  }) |
-                @Html.ActionLink("Details", "Details", new {  id=item.Id  }) |
+                @Html.ActionLink("Details", "Details", new { id=item.Id  }) |
                 @Html.ActionLink("Delete", "Delete", new {  id=item.Id  })
             </td>
         </tr>
