--- a/ComiteApp/Views/Digitador/Index.cshtml
+++ b/ComiteApp/Views/Digitador/Index.cshtml
@@ -8,6 +8,15 @@
 <h1>Bienvenido Usuario Digitador</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
-</p>
 
+    RF2 - Gestión de Atletas (usuarios con rol “Digitador”) (MVC)
+    • Los atletas competidores se cargarán manualmente en la base de datos, y por el momento no tendrán
+    un usuario asignado.
+    • Los usuarios con rol “Digitador” podrán asignar a los atletas una o más disciplinas en las que compiten
+    o Seleccionará el atleta de un listado ordenado por nombre del país y luego por apellido y
+    nombre del atleta en forma alfabética, de la A a la Z.
+    o Se mostrarán todos los datos del atleta (incluyendo las disciplinas en las que está actualmente
+    registrado) y se seleccionará el/las nuevas disciplinas en las que participa.
+    o Deberá controlar que no se puedan agregar disciplinas en las que el atleta ya participe.
+    • En esta etapa del desarrollo no se consideran equipos, solamente atletas individuales.
+</p>
