--- a/ComiteApp/Views/Shared/_Layout.cshtml
+++ b/ComiteApp/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Index">Gestion Atletas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Index">Gestion Disciplinas</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Digitador" asp-action="Index">Gestion Disciplinas</a>
                             </li>
                         }
                         <li class="nav-item">
