--- a/ComiteApp/Views/Digitador/Create.cshtml
+++ b/ComiteApp/Views/Digitador/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@using ComiteCompartido.Dtos.Usuarios
+﻿@using ComiteCompartido.Dtos.Disciplinas
 @model DisciplinasAltaDto
 @{
     ViewData["Title"] = "Crear un usuario Digitador";
@@ -13,14 +13,14 @@
             <input type="hidden" name="Discriminator" value="Digitador" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <label asp-for="Nombre" class="control-label"></label>
+                <input asp-for="Nombre" class="form-control" />
+                <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
+                <label asp-for="Year" class="control-label"></label>
+                <input asp-for="Year" class="form-control" />
+                <span asp-validation-for="Year" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
