Precarga de atletas

--- a/ComiteApp/Views/Digitador/Disciplinas.cshtml
+++ b/ComiteApp/Views/Digitador/Disciplinas.cshtml
@@ -2,10 +2,10 @@
 @model IEnumerable<DisciplinasListadoDto>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Disciplinas";
 }
 
-<h3>Index</h3>
+<h3>Lista de Disciplinas Olimpicas</h3>
 
 <form asp-action="CrearDisciplina" method="post">
     <div>
