--- a/ComiteApp/Views/Usuario/Delete.cshtml
+++ b/ComiteApp/Views/Usuario/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Eliminar Usuario</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Esta seguro que desea eliminar el usuario?</h3>
 <div>
     <h4>Digitador</h4>
     <hr />
