--- a/ComiteApp/Views/Shared/_Layout.cshtml
+++ b/ComiteApp/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Digitador" asp-action="Eventos">Gestion Eventos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Digitador" asp-action="Atletas">Gestion Atletas</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Atletas" asp-action="Atletas">Gestion Atletas</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Digitador" asp-action="Disciplinas">Gestion Disciplinas</a>
