gestion atletas no guarda disiplinas

--- a/ComiteApp/Views/Atletas/Atletas.cshtml
+++ b/ComiteApp/Views/Atletas/Atletas.cshtml
@@ -16,6 +16,8 @@
             <th>
                 Año
             </th>
+            <th>Pais</th>
+            <th>Disciplinas</th>
             <th></th>
         </tr>
     </thead>
@@ -31,6 +33,10 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.NombrePais)
+                </td>
+                <td>@Html.DisplayFor(modelItem => item.Disciplinas)</td>
+                <td>
+                    @Html.ActionLink("Editar", "Edit", new { id = item.id }) |
                 </td>
             </tr>
         }
