Agrego usuario digitador

--- a/ComiteApp/Views/Login/Login.cshtml
+++ b/ComiteApp/Views/Login/Login.cshtml
@@ -5,13 +5,27 @@
 }
 
 <form method="post">
-    <input  type="text" name="email" placeholder="Email"/>
-    <input  type="text" name="password" placeholder="password"/>
-    <button type="submit">Login</button>
-    <p>Usuario por defecto: 
-    <ul>
-        <li>Email: admin@admin.com</li>
-            <li>Password: Admin.123</li>
-    </ul>
-    </p>
+    <div>
+        <input type="text" name="email" placeholder="Email" />
+        <input type="text" name="password" placeholder="password" />
+        <button type="submit">Login</button>
+    </div>
 </form>
+<div>
+    <p>
+        Usuario Administrador por defecto:
+        <ul>
+            <li>Email: admin@admin.com</li>
+            <li>Password: Admin.123</li>
+        </ul>
+    </p>
+</div>
+<div>
+    <p>
+        Usuario Digitador por defecto:
+        <ul>
+            <li>Email: digitador@digitador.com</li>
+            <li>Password: Digitador.123</li>
+        </ul>
+    </p>
+</div>
