--- a/ComiteApp/Views/Atletas/Edit.cshtml
+++ b/ComiteApp/Views/Atletas/Edit.cshtml
@@ -34,13 +34,16 @@
                 <span asp-validation-for="paisId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label for="AvailableDisciplines" class="control-label">Available Disciplines</label>
-                <select name="AvailableDisciplinaIds" class="form-control" multiple>
+                <label for="DisciplinasDisponibles" class="control-label">Todas las Disciplinas</label>
+                <select name="DisciplinasDisponiblesIds" class="form-control">
                     @foreach (var disciplina in ViewBag.Disciplinas)
                     {
-                        <option value="@disciplina.Id">
-                            @disciplina.Nombre
-                        </option>
+                        if (!Model.DisciplinasIds.Contains(disciplina.Id))
+                        {
+                            <option value="@disciplina.Id">
+                                @disciplina.Nombre
+                            </option>
+                        }
                     }
                 </select>
                 <div class="form-group">
@@ -49,15 +52,15 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="SelectedDisciplinaIds" class="control-label">Selected Disciplines</label>
-                <select name="SelectedDisciplinaIds" class="form-control" multiple>
+                <label for="SelectedDisciplinaIds" class="control-label">Disciplinas del Atleta</label>
+                <select name="SelectedDisciplinaIds" class="form-control">
                     @foreach (var selectedId in Model.DisciplinasIds)
                     {
                         var disciplinas = (IEnumerable<Disciplina>)ViewBag.Disciplinas; // Asegúrate de que ViewBag.Disciplinas sea del tipo correcto
                         var disciplina = disciplinas.FirstOrDefault(d => d.ID == selectedId);
                         if (disciplina != null)
                         {
-                            <option value="@disciplina.ID" selected="selected">
+                            <option value="@disciplina.ID">
                                 @disciplina.Nombre
                             </option>
                         }
