excepciones de disciplina

--- a/ComiteApp/Views/Digitador/Disciplinas.cshtml
+++ b/ComiteApp/Views/Digitador/Disciplinas.cshtml
@@ -7,7 +7,7 @@
 
 <h3>Lista de Disciplinas Olimpicas</h3>
 
-<form asp-action="CrearDisciplina" method="post">
+<form asp-controller="Digitador" asp-action="CrearDisciplina" method="post">
     <div>
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" required />
