--- a/ComiteApp/Views/Eventos/Index.cshtml
+++ b/ComiteApp/Views/Eventos/Index.cshtml
@@ -3,14 +3,24 @@
 @{
     ViewData["Title"] = "List";
 }
-
 <h3>Lista de eventos</h3>
+<div class="mb-6">
+
 
 <p>
     <a asp-action="Create" class="btn btn-success">
         <i class="bi bi-plus"></i> Agregar Nuevo evento
     </a>
 </p>
+<div  class="mb-3">
+    <label for="filterDate" class="form-label">Filtrar por Fecha:</label>
+    <input type="date" id="filterDate" class="form-control" style="width: auto; display: inline-block;" />
+    <a asp-action="Create" class="btn btn-primary">
+        <i class="bi bi-plus"></i> Filtrar
+    </a>
+</div>
+</div>
+
 <table class="table">
     <thead>
         <tr>
