--- a/ComiteApp/Views/Shared/_Layout.cshtml
+++ b/ComiteApp/Views/Shared/_Layout.cshtml
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ComiteApp.styles.css" asp-append-version="true" />
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
 </head>
 <body>
     <header>
@@ -49,6 +55,18 @@
             </div>
         </nav>
     </header>
+    @if (ViewBag.Message != null)
+    {
+        <div class="alert alert-warning" role="alert">
+            @ViewBag.Message
+        </div>
+    }
+    @if (ViewBag.sucessMessage != null)
+    {
+        <div class="alert alert-success" role="alert">
+            @ViewBag.sucessMessage
+        </div>
+    }
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -65,11 +83,6 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
-    @if (ViewBag.Message != null)
-    {
-        <div class="alert alert-danger" role="alert">
-            @ViewBag.Message
-        </div>
-    }
+
 </body>
 </html>
